<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:maxLength="20"
        android:id="@+id/nick"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nickHint"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:maxLength="20"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nick" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="124dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="124dp"
        android:text="@string/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/rankingButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="124dp"
        android:text="@string/ranking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
</androidx.constraintlayout.widget.ConstraintLayout>